# savgol-filter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: example_basic.py  example_derivatives.py
savgol_filter/: __init__.py  core.py
tests/: test_core.py
